  * 当requestAware为true时，所生成的URL会自动加上当前request的server信息。这个在绝大多数情况下是不需要的。故修改之。

* 将原petstore示例中的页面验证组件PageAuthorizationService和PageAuthorizationValve移植到turbine中。

* 新增pull tool：<context-exposer>可将context中的bean直接暴露到pull tools中，供模板使用。

* 增加对于spring-test的支持。

* 增加测试工具：SpringextContextLoader和ServletTestContainer，使用方法参见citrus-test-webx单元测试。

* 改进：将读取action参数的任务由performAction valve移到analyzeURL valve，从而使其它的valve也能通过rundata取得action参数。例如安全检验的valve。
  * 注意：很少有应用程序会去修改action参数。但如果有人这样做了，在新的实现下，代码可能会失效。

* 改进：rundata.setRedirectTarget()以后，自动清除action，避免执行action。

* 改进：JspService支持jspx后缀。

* 将util.internal.regex.*和util.internal.ToStringBuilder等内部类升级至非internal类，以方便其它应用使用。

* bugfix: ClassLoaderUtil.getResources(name)中的小问题。

* bugfix：InheritableListableBeanFactory.registerResolvableDependency()只阻止对parent context中已注册的ProxyTargetFactory对象的覆盖，
  使ResourceLoader和ApplicationContext等对象的注入方式仍然和spring原来相同。

* 确保在java7下面可以编译并测试通过。

-- Changes in 3.0.7

* 删除citrus-springext-all-in-one项目。

* 修改项目的名称：
  citrus-webx-all-in-one -> citrus-webx-all
  citrus-test-all-in-one -> citrus-test-all
  所有依赖这两个包的应用需要修改一下pom.xml。

* 改进pom.xml，以便发布到central maven repository中：
  * 添加javadocs
  * 修改pom参数

* 升级jexl到2.0.1，使之支持可变参数，例如：$messageUtil.formatMessage(format, args...)

-- Changes in 3.0.8

* 添加方法：navigator.redirectTo(name).withParameter(..).end(); 通过end()方法可以明确结束语句，并发出重定向请求。
* 所有源码改用UTF-8，符合多数开发环境的默认配置。
* 改进pom，在开发时使用较高版本的java，发布时使用保守的Java 1.5。
* 改进form/velocity service测试，使之可以在非(locale=CHINA, charset=GBK)的情况下测试通过。
* bugfix: number-validator设置限定范围以后，当用户输入非法数字时，validator抛出异常。
* 改进form，对于field.getKey()，同时支持压缩格式（_fm.g._0.f）和非压缩格式（_fm.group._0.field），大小写不敏感。这样可以方便测试。
  如果<form fieldKeyFormat="uncompressed">参数被明确指定，那么所有输出的字段名全为非压缩的，并且不支持压缩格式。
* 删除暂时没用的asm/codegen子模块，并将少量依赖到的类移到generictype子模块中。
* SetLocaleRequestContext中增加功能：可根据request uri，自动设置与默认值不同的input/output charset

  <set-locale>
    <override uri="*.json" inputCharset="UTF-8" outputCharset="UTF-8" />
  </set-locale>
